--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -35,7 +35,7 @@
   margin-top: 25px;
   margin-left: 10px;
 }
-img_booktocook{
+.img_booktocook{
   margin-left: 40px;
 }
 
